Fix bug where notes would show as duplicate due to being in the cache and being fetched. Added highlight color to dark mode.

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,10 +7,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   --primary-text-color: #000;
   --primary-background-color: #fff;
   --low-contrast-background-color: #fafafa;
+  --highlight-color: #ffed61;
 }
 
 .dark-theme {
   --primary-text-color: #fff; /* too much constrast? */
   --primary-background-color: #2e2e2e;
   --low-contrast-background-color: #1c1c1c;
+  --highlight-color: #bd9400;
 }
